@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Always display system task lists to administrators.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1538,7 +1538,7 @@
    <date>2014-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Always display system task lists to administrators.
    </notes>
   </release>
  </changelog>
