@@ -2,6 +2,7 @@
 v4.3.0-git
 ----------
 
+[jan] Always display system task lists to administrators.
 
 
 -----------
